# IceBear

./: .gitignore  .gitmodules  CMakeLists.txt  IceBear.py  IncAnalyzer.py  NOTICE  README  README.md  analyze_repos.py  analyze_repos.sh  build.py  build_controller.py  cmake_data_struct.py  compare_folders.sh  compile_command.py  dev_diary.md  diff.sh  diff_db.py  diff_out.txt  git_utils.py  logger.py  pyproject.toml  repo_controller.py  reports_analysis.py  requirements.txt  test_arg.json  tmp.py  utils.py
IncAnalysis/: analyzer.py  analyzer_config.py  analyzer_utils.py  compile_command.py  configuration.py  environment.py  file_in_cdb.py  logger.py  process.py  reports_postprocess.py  repository.py  utils.py
clang_tool/: CFGDumpChecker.cpp  CMakeLists.txt  CollectIncInfo.cpp  DiffLineManager.cpp  DiffLineManager.h  ExtractCG.cpp  IncInfoCollectASTVisitor.cpp  IncInfoCollectASTVisitor.h  PropogateOnCG.cpp  PropogateOnCG.h  ReverseCallGraph.cpp  ReverseCallGraph.h  extractCG.cpp
clang_tool/test/: a.out  class_field.cpp  class_field.plist  class_inherit.cpp  deref_scope.cpp  deref_scope.plist  example.cpp  example.fs  example.plist  field_order.cpp  field_order.plist  forward_decl.cpp  forward_decl.cpp.cg  forward_decl.plist  function_name.cpp  function_obj.cpp  function_ptr.cpp  global_variable.cpp  global_variable.cpp.fs.sum  global_variable.cpp.json  global_variable.plist  include.cpp  lambda_memory_manage.cpp  linefilter.cpp  linefilter.h  multi_parents.cpp  namespace.cpp  new_operator.cpp  new_operator.cpp.cg  preprocess.cpp  struct.c  struct.cpp  struct_bit.cpp  struct_field.cpp  template_class.cpp  union.cpp  union.plist  value_flow.cpp  virtual_function.cpp  virtual_function.cpp.cg  (+3 more)
config/: checker.py  clang-tidy_checkers.json  clang-tidy_config.json  clangsa_config.json  cppcheck_config.json  csa_config.json  gsa_checkers.json  inc_config.json  preprocessor.json
data_struct/: cache.py  cmakeFiles.py  codemodel.py  directory.py  index.py  reply.py  target.py
icebear/: __init__.py
panda/: panda
repos/: 20250107_222835_noinc_and_20250108_101806_func.json  20250108_101806_func_and_20250109_224530_func.json  20250108_101806_func_and_20250110_112545_func.json  20250108_101806_func_and_20250110_135557_func.json  20250109_224530_func_and_20250110_135557_func.json  20250110_135557_func_and_20250110_165145_noinc.json  20250112_120039_noinc_and_20250112_133404_func.json  benchmark.json  repos.csv  repos.json  repos_info.json
repos/result/data_in_paper/: IB_time.csv  IncB_time.csv  IncB_vs_IB.json
