[project]
name = "icebear"
version = "0.1.0"
description = "IceBear - A scheduler for C/C++ static analysis tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
]

[project.scripts]
icebear = "icebear:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["icebear"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
